# rag2agents

./: .env.docker.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  otel-collector-config.yaml
.claude/: settings.local.json
.docs/: 01-spec.md  02-plan.md  02-spec.md  03-task.md  04-issue.md  04-todos.md  05-subtodo.md  06-ISSUE.md  07-prompt-phrase-4.md  08-prompt-phase-3.md  09-prompt-phase-5.md  10-prompt-phase-7.md  12-prompt-phrase-user-profile.md  14-prompt-admin.md  (+6 more)
backend/: .env.example  Dockerfile.dev  pyproject.toml
backend/alembic/versions/: 098ce5900338_add_settings_table.py  2a5ee357c85a_add_notification_and_notification_.py  4b61be4d9675_add_agent_user_fields.py  7db4667ec451_add_generated_images_table.py  c035a9f8b271_add_plans_subscriptions_invoices_tables.py  e1f2g3h4i5j6_add_workflow_tables.py
backend/app/: config.py  main.py
backend/app/agents/tools/: base.py  calculator.py  rag_search.py  summarize.py
backend/app/core/: database.py  dependencies.py  exceptions.py  rate_limit.py  security.py  telemetry.py
backend/app/middleware/: __init__.py  metrics.py
backend/app/models/: __init__.py  agent.py  conversation.py  document.py  generated_image.py  invoice.py  notification.py  notification_preference.py  plan.py  project.py  project_document.py  setting.py  subscription.py  user.py  workflow.py
backend/app/providers/: llm.py
backend/app/routes/: auth.py  chat.py  documents.py  health.py  images.py  notifications.py  workflows.py
backend/app/routes/admin/: settings.py  users.py
backend/app/schemas/: __init__.py  admin.py  agent.py  auth.py  chat.py  image.py  usage.py  user.py  workflow.py
backend/app/scripts/: seed_plans.py
backend/app/services/: admin_stats.py  admin_usage.py  admin_users.py  audit_log.py  auth.py  conversation.py  document.py  document_processor.py  image_generation.py  litellm_keys.py  minio_storage.py  models.py  notification.py  notification_sse.py  project.py  rag.py  settings.py  storage.py  stripe_service.py  system_health.py  workflow.py  workflow_engine.py
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_chat.py  test_conversation.py  test_document.py  test_rate_limit.py  test_storage.py  test_workflow.py
(+140 files in other folders)
